[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
etherparse = "0.19.0"
local-ip-address = "0.6.10"
log = "0.4.29"
mac_address = "1.1.8"
rand = "0.10.0"
smoltcp = "0.12.0"
socket2 = "0.6.2"
tokio = { version="1.49.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"]}
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
